--- a/schema/managedAttribute.yaml
+++ b/schema/managedAttribute.yaml
@@ -47,7 +47,10 @@ paths:
           description: managed attributes satifying the query restrictions
           content:
             application/json:
+            # SYED responses would be array of data items, not just data object 
               schema:
+                type: array
+                items:
                 $ref: '#/components/schemas/ManagedAttribute'
         '400':
           description: bad input parameter
@@ -89,9 +92,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items: 
-                  "$ref": "#/components/schemas/ManagedAttribute"
+                $ref: '#/components/schemas/ManagedAttribute'
         "400":
           description: Invalid ID supplied
         "404":
@@ -138,6 +139,7 @@ paths:
           description: invalid ID supplied
         '404':
           description: managed attribute not found
+
 components:
   schemas:
     ManagedAttribute:
@@ -169,16 +171,22 @@ components:
                   description: name of the managed attribute
                   example: 
                     specimen_view
+                # SYED data file compliant to this schema may have value as - STRING or INTEGER,  
+                # that too only in uppercase.
                 managedAttributeType:
                   description: type of the managed attribute          
                   enum: [
                      STRING,
                      INTEGER]
+                # SYED acceptedValues would be array of string or interger items. 
+                # This is implemented using oneOf keyword
                 acceptedValues:
                   type: array
                   description: accepted values of the named attribute (if any)      
                   items: 
-                    type: object                  
+                     oneOf:
+                        - $ref: '#/components/schemas/AcceptedValuesStr'
+                        - $ref: '#/components/schemas/AcceptedValuesInt'                  
                   example: 
                     - dorsal
                     - 1 
@@ -191,3 +199,8 @@ components:
                   example: {
                      "fr":  Description en Français,
                      "en":  English description}
+    AcceptedValuesStr:
+      type: string
+    AcceptedValuesInt:
+      type: integer
+      
