--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,14 @@
-language: python
+language: node_js
+node_js:
+- '10'
 
-python:
- - "3.7" 
-
-before_install: 
- - sudo apt-get install -y asciidoctor
-
-addons:
- apt_packages:
-  - asciidoctor
-
-install:
- - pip install git+https://github.com/AAFC-BICoE/json-schema2adoc.git@dev
-
-before_script:
- - mkdir adoc
-
-script:
- - generate_api_doc schema/ schema/
- - asciidoctor -o adoc/index.html object-store-rest-api.adoc
+script: npx redoc-cli bundle schema/object-store-api.yaml -o redoc/index.html
 
 deploy:
  provider: pages
  skip_cleanup: true
  github_token: $GITHUB_TOKEN 
- local_dir: adoc
+ local_dir: redoc
  keep_history: true
  on:
-  branch: json-schema
+  branch: master
