Support 19317 Add open API 3 schema for object subtype, 1. Updated component definition for the post and patch 2. Linked the subtype yml to object-store-api yml.

--- a/schema/object-store-api.yaml
+++ b/schema/object-store-api.yaml
@@ -17,7 +17,11 @@ paths:
     $ref: 'metadata.yaml#/paths/~1v1~1metadata'
   /v1/metadata/{Id}:
     $ref: 'metadata.yaml#/paths/~1v1~1metadata~1{Id}'  
-  /v1/managedAttribute:
+  /v1/managed-attribute:
     $ref: 'managedAttribute.yaml#/paths/~1v1~1managed-attribute'    
   /v1/managed-attribute/{Id}:
-    $ref: 'managedAttribute.yaml#/paths/~1v1~1managed-attribute~1{Id}'  
+    $ref: 'managedAttribute.yaml#/paths/~1v1~1managed-attribute~1{Id}'
+  /v1/object-subtype:
+    $ref: 'objectSubtype.yaml#/paths/~1v1~1object-subtype'
+  /v1/object-subtype/{Id}:
+    $ref: 'objectSubtype.yaml#/paths/~1v1~1object-subtype~1{Id}'
