Issue 70 Schema data type is defined as string - Update data type to use enum of one element ( current constant equivalent)

--- a/schema/metadata.yaml
+++ b/schema/metadata.yaml
@@ -185,7 +185,7 @@ components:
         - attributes
       properties:
         type:
-          type: string
+          enum: [metadata]      
           description: The type of the object of the data being returned.
         attributes:
           description: Schema representing the metadata associated with objects
@@ -292,9 +292,9 @@ components:
             dcCreator:
               type: string
               format: uuid
-            acMetadataCreator:                
-              type: string
-              format: uuid
+            acMetobject-typeadataCreator:                
+              typobject-typee: string
+              forobject-typemat: uuid
             acDerivedFrom:
               type: string
               format: uuid               
