Issue 70 Schema data type is defined as string - Restore the change by mistake

--- a/schema/metadata.yaml
+++ b/schema/metadata.yaml
@@ -292,9 +292,9 @@ components:
             dcCreator:
               type: string
               format: uuid
-            acMetobject-typeadataCreator:                
-              typobject-typee: string
-              forobject-typemat: uuid
+            acMetadataCreator:                
+              type: string
+              format: uuid
             acDerivedFrom:
               type: string
               format: uuid               
