--- a/schema/metadata.yaml
+++ b/schema/metadata.yaml
@@ -185,7 +185,7 @@ components:
         - attributes
       properties:
         type:
-          type: string
+          enum: [metadata]      
           description: The type of the object of the data being returned.
         attributes:
           description: Schema representing the metadata associated with objects
