--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '10'
 
-script: npx redoc-cli bundle schema/object-store-api.yaml -o redoc/index.html
+script: npx redoc-cli@0.9.11 bundle schema/object-store-api.yaml -o redoc/index.html
 
 deploy:
  provider: pages
