--- a/schema/managed-attribute.yml
+++ b/schema/managed-attribute.yml
@@ -1,7 +1,7 @@
 paths:
   /v1/managed-attribute:
     get:
-      summary: get managed attributes
+      summary: List managed attributes
       operationId: getManagedAttributes
       description: By passing in query string, user can get available managed attributes authorised
       parameters:
@@ -43,9 +43,9 @@ paths:
         '404':
           description: managed attribute not found
     post:
-      summary: adds a managed attribute
+      summary: Add a managed attribute
       operationId: addManagedAttribute
-      description: Adds a managed attribute
+      description: Add a managed attribute
       responses:
         '201':
           description: managed attribute created
@@ -61,8 +61,8 @@ paths:
         description: Managed attribute to add
   /v1/managed-attribute/{Id}:
     get:
-      summary: Find managed attribute by ID
-      description: Returns a single managed attribute
+      summary: Get a managed attribute 
+      description: Return a single managed attribute
       operationId: getManagedAttributeById
       parameters:
         - name: Id
@@ -84,9 +84,9 @@ paths:
         "404":
           description: Managed attribute not found
     patch:
-      summary: update a managed attribute
+      summary: Update a managed attribute
       operationId: updateManagedAttribute
-      description: update a managed attribute
+      description: Update a managed attribute
       parameters:
         - name: Id
           in: path
@@ -107,9 +107,9 @@ paths:
               $ref: '#/components/schemas/ManagedAttribute'
         description: managed attribute to add
     delete:
-      summary: delete a managed attribute
+      summary: Delete a managed attribute
       operationId: deleteManagedAttribute
-      description: delete a managed attribute
+      description: Delete a managed attribute
       parameters:
         - name: Id
           in: path
